--- a/zh/our-financials.html
+++ b/zh/our-financials.html
@@ -83,6 +83,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
              <script type="text/javascript" src="/etc.clientlibs/temasek-commons/clientlibs/common/video-brightcove.js"></script>
 
+        <!-- 全局配置文件 -->
+        <script type="text/javascript" src="/config/site-config.js"></script>
 
 
 
@@ -156,17 +158,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <div class="topmenu-wrapper">
-                <div class="link-1 fixed-link">
+                <div class="link-login fixed-link">
 
     <div class="fixed-link fixed-link-default">
-</div>
+        <a href="#"
+            class='link-login-btn'>
+            登录
+            <img src alt>
+        </a>
+
+    </div>
 
 </div>
 
-                <div class="link-t50 fixed-link">
+                <div class="link-register fixed-link">
 
     <div class="fixed-link fixed-link-default">
-</div>
+        <a href="#"
+            class='link-register-btn'>
+            注册
+            <img src alt>
+        </a>
+
+    </div>
 
 </div>
 
