--- a/en/our-financials.html
+++ b/en/our-financials.html
@@ -127,7 +127,8 @@ s.parentNode.insertBefore(b, s);})();
   obApi('track', 'PAGE_VIEW');
 </script>
 
-
+ <!-- 全局配置文件 -->
+ <script type="text/javascript" src="/config/site-config.js"></script>
 
 
 
